--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       <p>Toronto Based Engineering Student</p>
     </section>
 
-    <div class="about-me" style="font-family: cascadia code;">
+    <div class="about-me" style="font-family: 'Palatino'; font-size: 1.55rem;">
         <p class="animated-text">
           I am a second-year computer engineering student at <a href="https://www.torontomu.ca/" target="_blank">Toronto Metropolitan University</a>. My passion lies in computer programming, with a focus on full stack development and IoT. In my spare time, I enjoy creating automation scripts to streamline daily tasks. When I'm not programming, I enjoy skateboarding, playing soccer or basketball, and gaming <a href="/epik_aim" target="_blank">(#highestrankedNAinval!)</a>.
         </p>
