--- a/templates/projects.html
+++ b/templates/projects.html
@@ -42,11 +42,10 @@
                   <p>Full-stack personal portfolio web application.</p>
                   <p style="font-size:0.72rem; padding-right:10px; padding-bottom:10px; padding-left:8px;"><u>Technologies Used:</u> 
                     Frontend --> HTML/CSS, 
-                    Nextcord API, 
                     Backend --> Python, 
                     Framework --> Flask, 
                     Hosting --> Linode (Linux Ubuntu VM instance), 
-                    Proxied through --> Cloudflare</p>
+                    Proxied through Cloudflare</p>
               </div>
             </div>
         </div>
