--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -23,39 +23,39 @@
 
         <div class="grid-wrapper">
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/6jo3Sv2PWgX7oX2gSsvbI5?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>🗣️🗣️</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/15sMBXkb4XHIKPxFLHvDAn?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>🥁🎸</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7qPHokLDeNrXTWrjhgudLj?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>Don Toliver popped off</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7HoWiIdwg7A2vomrmGmW6N?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>🚗</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/6K8VQ84MqhsoakN5MjrnVR?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>ribbons</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4GSOrzdPw00JS2aB2dAkSi?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>🏍️</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4QCYm5VF70vcx5Ua15aTSN?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4bZJPUQxVNT8rmaxnNSrvV?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>💨</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/754hhnczVNu3ibRaoAcujX?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>🪜🪜</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/37CoOXIsgF3NzbK1zHZetk?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>Peak 🕷️🕸️</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5MUxrNd7Gr2HksLcAlB0IO?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>CARTI GOAT 🐐</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7iLA6PQeQWRjLDHOJgGpj5?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/0og9wKFGgFFNQnrBe7eisG?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>🗣🔊</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/3y3NwQPQAjKCunRz2eKggA?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>🪨</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/0tMMPZEt6Gyrl9FI8zSicm?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>☁️</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/30AnNG3dFbHLQuSbIVWEbF?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/12Uc8hH4rw2Lb0598pqBtL?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>tre flip 🛹</p></center>
             </div>
 
