--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,10 @@
           <a class="nav-link" href="/blog">Blog <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/projects">Projects<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/projects">Projects <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/contact">Contact <span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
@@ -30,7 +33,7 @@
   </head>
   <body>
     <h1>
-      <center>Blog</center>
+      <center>Contact</center>
     </h1>
   </body>
 </html>
